ghidra_decompiler/wrapper.h

/**
 * Fission C Wrapper for Ghidra Decompiler
 * 
 * This header provides the C ABI interface for Rust FFI.
 * It wraps the C++ Ghidra decompiler with extern "C" functions.
 */

#ifndef FISSION_WRAPPER_H
#define FISSION_WRAPPER_H

#include <stdint.h>
#include <stddef.h>

#ifdef __cplusplus
extern "C" {
#endif

/**
 * Opaque handle to a Fission decompiler instance.
 * Internally wraps Ghidra's Architecture + Sleigh translator.
 */
typedef struct FissionDecompiler FissionDecompiler;

/**
 * Initialize a new decompiler instance.
 * 
 * @param sla_dir Path to directory containing .sla specification files
 * @return Pointer to decompiler instance, or NULL on failure
 */
FissionDecompiler* fission_decompiler_init(const char* sla_dir);

/**
 * Destroy a decompiler instance and free all resources.
 * 
 * @param decomp Pointer to decompiler instance
 */
void fission_decompiler_destroy(FissionDecompiler* decomp);

/**
 * Decompile a function at the given address.
 * 
 * @param decomp Decompiler instance
 * @param bytes Raw machine code bytes
 * @param bytes_len Length of bytes buffer
 * @param base_addr Virtual address of the function
 * @param is_64bit 1 for 64-bit binary, 0 for 32-bit
 * @param out_buffer Buffer to write decompiled C code
 * @param out_len Maximum size of output buffer
 * @return Bytes written (including null), or -1 on error. 
 *         If buffer too small, returns required size (including null).
 */
int fission_decompile(
    FissionDecompiler* decomp,
    const uint8_t* bytes,
    size_t bytes_len,
    uint64_t base_addr,
    int is_64bit,
    char* out_buffer,
    size_t out_len
);

/**
 * Disassemble instructions at the given address.
 * (Not implemented yet - returns -1)
 */
int fission_disassemble(
    FissionDecompiler* decomp,
    const uint8_t* bytes,
    size_t bytes_len,
    uint64_t base_addr,
    char* out_buffer,
    size_t out_len
);

/**
 * Get the last error message for the given instance.
 * 
 * @param decomp Decompiler instance
 * @return Pointer to error string, or NULL if no error
 */
const char* fission_get_error(FissionDecompiler* decomp);

/**
 * Check if native decompiler is available.
 * 
 * @return 1 if available, 0 otherwise
 */
int fission_is_available(void);

#ifdef __cplusplus
}
#endif

#endif // FISSION_WRAPPER_H